--- a/docs/rest-api/paths/auth@refreshtoken.yaml
+++ b/docs/rest-api/paths/auth@refreshtoken.yaml
@@ -2,10 +2,10 @@ post:
   tags:
     - auth
   operationId: refreshtoken
-  summary: Refresh token
+  summary: Refresh a JWT using a refresh token
   description: Refresh token
   responses:
-    '204':
+    "204":
       $ref: ../components/responses/CreatedNoContent.yaml
-    '400':
+    "400":
       $ref: ../components/responses/Error.yaml
