--- a/docs/rest-api/components/responses/readRepositoryRating.yaml
+++ b/docs/rest-api/components/responses/readRepositoryRating.yaml
@@ -9,14 +9,60 @@ content:
         repositoryName:
           $ref: ../schemas/repositoryName.yaml
         aggregates:
-          $ref: ../schemas/aggregateObject.yaml
+          type: object
+          description: A hash of aggregated metrics such as mean, mode, etc.
+          additionalProperties:
+            $ref: ../schemas/aggregateObject.yaml
+        descriptions:
+          type: object
+          description: A hash of descriptions for each of the ratings found in ratings.values below.
+          properties:
+            documentation:
+              $ref: ../schemas/ratingDescription.yaml
+            usage:
+              $ref: ../schemas/ratingDescription.yaml
+            quality:
+              $ref: ../schemas/ratingDescription.yaml
+            cost:
+              $ref: ../schemas/ratingDescription.yaml
+            learning:
+              $ref: ../schemas/ratingDescription.yaml
+            comment:
+              $ref: ../schemas/ratingDescription.yaml
+          additionalProperties: false
+        nextPageToken:
+          type: string
+          description: Somewhat tbd but a placeholder for aiding pagination of larger datasets
         ratings:
           type: array
+          description: An array of UGC ratings including user information and rating values.
           items:
             type: object
             properties:
               username:
-                type: string
-            additionalProperties:
-              $ref: ../schemas/organisationName.yaml
+                $ref: ../schemas/username.yaml
+              avatar:
+                $ref: ../schemas/avatar.yaml
+              createdAt:
+                $ref: ../schemas/createdAt.yaml
+              updatedAt:
+                $ref: ../schemas/updatedAt.yaml
+              values:
+                type: object
+                description: Hash of each rating value by this user
+                properties:
+                  documentation:
+                    $ref: ../schemas/ratingValue.yaml
+                  usage:
+                    $ref: ../schemas/ratingValue.yaml
+                  quality:
+                    $ref: ../schemas/ratingValue.yaml
+                  cost:
+                    $ref: ../schemas/ratingValue.yaml
+                  learning:
+                    $ref: ../schemas/ratingValue.yaml
+                  comment:
+                    $ref: ../schemas/ratingComment.yaml
+                additionalProperties: false
+            additionalProperties: false
       additionalProperties: false
